<resources>
    <string name="app_name">WanderWise</string>
    <string name="city_image">City Image</string>
    <string name="location_icon">Location Icon</string>
    <string name="denpasar">Denpasar</string>
    <string name="safe">Safe</string>
    <string name="like_icon">Like Icon</string>
    <string name="safety_level">Safety Level</string>
    <string name="home">Home</string>
    <string name="rank">Rank</string>
    <string name="post">Post</string>
    <string name="profile">Profile</string>
    <string name="current_location">Current location:</string>
    <string name="safety_score">Safety score:</string>
    <string name="_29_c">%s°C</string>
    <string name="_33">33</string>
    <string name="alex_bramartha">Alex Bramartha</string>
    <string name="november_20_2023">November 20, 2023</string>
    <string name="description_dummy">Daerah tersebut terasa sangat aman, dengan kehadiran penegak hukum yang terlihat dan jalanan yang terawasi dengan baik....</string>
    <string name="_133">133</string>
    <string name="john_doe">John Doe</string>
    <string name="welcome">Welcome,</string>
    <string name="explore_more_city">Explore more city</string>
    <string name="see_detail">See Detail</string>
    <string name="see_all">See All</string>
    <string name="popular_traveller_post">Popular traveller post</string>
    <string name="all_post">All post</string>
    <string name="your_post">Your post</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bali_indonesia">Bali, Indonesia</string>
    <string name="_3h_ago">3h ago</string>
    <string name="danger_denpasar_was_fall_by_australian_offensive">Danger! Denpasar was fall by Australian offensive.</string>
    <string name="search_city">Search city</string>
    <string name="monumen_bajra_sandhi">Monumen Bajra Sandhi</string>
    <string name="crime_category">Crime category</string>
    <string name="hospital">Hospital</string>
    <string name="police">Police</string>
    <string name="police_list">Police list</string>
    <string name="hospital_list">Hospital list</string>
    <string name="jl_mahendradatta_no_57x">Jl. Mahendradatta no 57X</string>
    <string name="bali_med_hospital">Bali Med Hospital</string>
    <string name="_62_361_484748">(+62-361) 484748</string>
    <string name="select_image">Select image</string>
    <string name="write_caption">Write caption</string>
    <string name="pick_city">Pick city</string>
    <string name="cancel">Cancel</string>
    <string name="upload">Upload</string>
    <string name="live_notification">Live Notification</string>
    <string name="what_is_denpasar_city">What is %s city?</string>
    <string name="description_summary_city">Denpasar is the capital city and also the center of government and economy of the province of Bali, Indonesia. Denpasar is the largest city in the Nusa Tenggara Islands and the second largest city in Eastern Indonesia after Makassar City.</string>
    <string name="destination">Destination</string>
    <string name="news">News</string>
    <string name="information">Information</string>
    <string name="mitigation">Mitigation</string>
    <string name="safety_score_text_preview">Safety Score</string>
    <string name="medium">Medium</string>
    <string name="population">%sk ppl/km²</string>
    <string name="population_text">Population</string>
    <string name="cost_of_life">Cost of Life</string>
    <string name="_900rb_month">%sUSD / month</string>
    <string name="internet">Internet</string>
    <string name="internet_speed">Fast 68Mbps (avg)</string>
    <string name="temperature">Temperature</string>
    <string name="_33_hospital">%s Hospital</string>
    <string name="_32_police">%s Police</string>
    <string name="news_title_dummy">Peningkatan Tingkat Kriminalitas Membuat Warga Khawatir, Pihak Berwenang Bersiap Mengambil Tindakan!</string>
    <string name="dummy_news_description">Tingkat kriminalitas yang meningkat belakangan ini telah menimbulkan kekhawatiran di kalangan warga setempat. Data terbaru menunjukkan peningkatan signifikan dalam berbagai jenis kejahatan, mulai dari pencurian hingga kekerasan jalanan. Menurut laporan kepolisian, kejahatan jalanan menjadi salah satu perhatian utama, dengan serangkaian insiden yang melibatkan pencurian dan penyerangan. Peningkatan ini telah menciptakan kekhawatiran akan keamanan warga dan mendorong panggilan untuk langkah-langkah keamanan yang lebih ketat. Pihak berwenang setempat, termasuk kepolisian dan lembaga terkait, telah merespons dengan serius terhadap situasi ini.</string>
    <string name="destination_description_dummy">Monumen Bajra Sandhi adalah salah satu destinasi ikonik di Denpasar, Bali, Indonesia. Berikut adalah deskripsi untuk destinasi ini: Monumen Bajra Sandhi: Pusat Sejarah dan Kebanggaan Bali Monumen Bajra Sandhi, yang juga dikenal sebagai Monumen Perjuangan Rakyat Bali, adalah sebuah monumen megah yang terletak di pusat kota Denpasar. Dibangun untuk mengenang perjuangan rakyat Bali selama sejarahnya, monumen ini menjadi salah satu simbol kebanggaan dan kekuatan budaya pulau ini. Arsitektur Megah: Monumen ini menarik perhatian dengan arsitektur megahnya yang menciptakan harmoni antara tradisional dan modern. Bangunan setinggi enam lantai ini menggambarkan filosofi Hindu-Bali dan dirancang sebagai bentuk tiga teratai yang bertingkat. Galeri Sejarah: Di dalam monumen, terdapat galeri pameran yang memukau yang menggambarkan sejarah dan perjuangan rakyat Bali. Mulai dari masa prasejarah hingga perjuangan melawan penjajahan Belanda, pengunjung dapat menjelajahi warisan budaya dan nilai-nilai yang dijunjung tinggi oleh masyarakat Bali. Pemandangan dari Ketinggian: Dari puncak monumen, pengunjung dapat menikmati pemandangan indah Denpasar dan sekitarnya. Dengan udara sejuk dan angin sepoi-sepoi, pengalaman melihat pemandangan ini memberikan momen yang tenang dan penuh makna. Acara Budaya dan Upacara: Monumen Bajra Sandhi juga menjadi tempat untuk berbagai acara budaya dan upacara. Festival, pameran seni, dan upacara keagamaan sering diadakan di sekitar monumen, menambah suasana kultural yang kaya. Tempat Rekreasi Keluarga: Selain sebagai tempat bersejarah, monumen ini juga menyediakan area rekreasi yang nyaman untuk keluarga. Taman yang rindang dan lapangan luas menjadi tempat ideal untuk piknik dan bersantai. Monumen Bajra Sandhi adalah destinasi yang sempurna untuk mereka yang ingin mendalami sejarah dan budaya Bali sambil menikmati keindahan arsitektur yang spektakuler. Sebuah perjalanan ke monumen ini tidak hanya memberikan wawasan mendalam tentang sejarah Bali tetapi juga pengalaman yang membangkitkan kebanggaan akan warisan budaya yang kaya dan indah.</string>
    <string name="wanderwise">WanderWise</string>
    <string name="welcome_traveler">Welcome Traveler</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="map_parsing">Map gagal dibentuk</string>
    <string name="map">Tidak bisa mencari gaya map. Error: </string>
    <string name="error_message_email">Masukkan email yang benar!</string>
    <string name="error_message_password">Masukkan password minimal 8 karakter!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_in_login">Are you new traveler? Let’s register first!</string>
    <string name="register_title">Let’s be the Traveler!</string>
    <string name="register_need">Please input your data</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="login_from_register">Are you have an account? Let’s login!</string>
    <string name="select_city">Select city</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="johndoe_gmail_com">johndoe@gmail.com</string>
    <string name="edit_preference">Edit preference</string>
    <string name="name">Name</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="abous_us">Abous us</string>
    <string name="log_out">Log out</string>
    <string name="change_name">Change name</string>
    <string name="change_email">Change email</string>
    <string name="notification">Notification</string>
    <string name="language">Language</string>
    <string name="send_feedback">Send feedback</string>
    <string name="about_us">About us</string>
    <string name="cannot_empty">Tidak boleh kosong!</string>
    <string name="error_message_connection">Kesalahan koneksi, cek koneksimu!</string>
    <string name="about_us_desc">Selamat datang di Secure Tourism, aplikasi yang bertujuan untuk meningkatkan keamanan dan kenyamanan perjalanan Anda. Kami berkomitmen untuk menyediakan solusi inovatif yang mendukung pengalaman wisata Anda dengan memberikan fokus pada keamanan dan keamanan informasi pribadi Anda. \n\nVisi dan Misi: \n\nVisi: Menjadi pemimpin dalam penyediaan solusi keamanan wisata yang terpercaya dan inovatif di seluruh dunia. \n\nMisi: Menyediakan platform yang aman dan terpercaya untuk memfasilitasi perjalanan wisata. Mengintegrasikan teknologi terkini untuk meningkatkan keamanan dan kenyamanan pengguna. Menyediakan informasi yang akurat dan terkini tentang destinasi wisata. Menjalin kerjasama dengan pihak terkait untuk meningkatkan standar keamanan industri wisata. \n\nTim Kami: Kami adalah tim yang berdedikasi dan berpengalaman dalam bidang teknologi dan industri pariwisata. Setiap anggota tim berkomitmen untuk memberikan layanan terbaik dan berkontribusi pada keberhasilan Secure Tourism. \n\nTerima kasih telah memilih Secure Tourism untuk perjalanan Anda. Kami berharap Anda memiliki pengalaman yang aman dan tak terlupakan bersama kami.</string>
    <string name="danger">Danger</string>
    <string name="warning">Warning</string>
    <string name="title_news_dummy">Peningkatan Tingkat Kriminalitas Membuat Warga Khawatir, Pihak Berwenang siap Mengambil Tindakan!</string>
    <string name="news_dummy_description">Tingkat criminality yang meningkat belakangan ini telah menimbulkan kekhawatiran di kalangan warga setempat. Data terbaru menunjukkan peningkatan signifikan dalam berbagai jenis kejahatan, mulai dari pencurian hingga kekerasan jalanan. Menurut laporan kepolisian, kejahatan jalanan menjadi salah satu perhatian utama, dengan serangkaian insiden yang melibatkan pencurian dan penyerangan. \n\n Peningkatan ini telah menciptakan kekhawatiran akan keamanan warga dan mendorong panggilan untuk langkah-langkah keamanan yang lebih ketat. Pihak berwenang setempat, termasuk kepolisian dan lembaga terkait, telah merespons dengan serius terhadap situasi ini.</string>
    <string name="read_more">Read more!</string>
</resources>