<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detailcity.DetailInfoCityActivity">

    <ImageView
        android:id="@+id/city_photo"
        android:layout_width="match_parent"
        android:layout_height="201dp"
        android:scaleType="centerCrop"
        android:src="@drawable/testing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/live_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/green"
        android:drawableLeft="@drawable/live_notification"
        android:text="@string/live_notification"
        android:textColor="#ffff"
        app:layout_constraintBottom_toBottomOf="@+id/city_photo"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="157dp"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_photo" />

    <TextView
        android:id="@+id/title_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="23dp"
        android:fontFamily="@font/figtree_medium"
        android:text="@string/what_is_denpasar_city"
        android:textColor="#ffff"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_photo" />

    <TextView
        android:id="@+id/description_summary"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fontFamily="@font/figtree_medium"
        android:textColor="#ffff"
        android:textSize="12sp"
        android:text="@string/description_summary_city"
        android:maxLines="6"
        android:layout_marginStart="23dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="19dp"
        app:layout_constraintBottom_toBottomOf="@+id/background_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_city" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#ffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background_image"
        app:tabTextAppearance="@style/TabFont">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destination" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mitigation" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#ffff"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs" />

</androidx.constraintlayout.widget.ConstraintLayout>