<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="10dp"
        android:elevation="50dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageNews"
                android:layout_width="match_parent"
                android:layout_height="162dp"
                android:scaleType="centerCrop"
                android:src="@drawable/crime_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/titleNews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="23dp"
                android:fontFamily="@font/figtree_semi_bold"
                android:text="@string/title_news_dummy"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageNews" />

            <TextView
                android:id="@+id/dateNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/figtree_medium"
                android:text="@string/november_20_2023"
                android:textColor="#ADADAD"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleNews" />

            <TextView
                android:id="@+id/descriptionNews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="23dp"
                android:fontFamily="@font/figtree_regular"
                android:text="@string/news_dummy_description"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateNews" />

            <Button
                android:id="@+id/readMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#ffff"
                android:elevation="50dp"
                android:fontFamily="@font/figtree_medium"
                android:text="@string/read_more"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionNews" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>